<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ReceiptDetailsActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/receipt_details_image"
                android:layout_width="700sp"
                android:layout_height="207sp"
                android:contentDescription="Receipt Image"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toTopOf="@id/receipt_details_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/receipt_details_name"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/name"
            android:gravity="center|start"
            android:paddingStart="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_small"
            android:textSize="@dimen/font_headline"
            android:background="@color/colorLightBlue"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receipt_details_image" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/receipt_details_edit_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:elevation="6sp"
            app:backgroundTint="@color/fabCamera"
            app:layout_constraintEnd_toStartOf="@+id/receipt_details_delete_fab"
            app:layout_constraintTop_toBottomOf="@+id/receipt_details_image"
            app:layout_constraintBottom_toTopOf="@+id/receipt_details_name"
            android:layout_marginRight="@dimen/margin_larger"
            android:layout_marginEnd="@dimen/margin_larger"
            android:src="@drawable/ic_action_edit"
            app:layout_anchor="@id/receipt_details_image"
            app:layout_anchorGravity="bottom|right|end"
            tools:ignore="VectorDrawableCompat" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/receipt_details_delete_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:elevation="6sp"
            app:backgroundTint="@color/colorRed"
            app:layout_constraintTop_toBottomOf="@+id/receipt_details_image"
            app:layout_constraintBottom_toTopOf="@+id/receipt_details_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_larger"
            android:layout_marginRight="@dimen/margin_larger"
            android:src="@drawable/ic_action_delete"
            app:layout_anchor="@id/receipt_details_image"
            app:layout_anchorGravity="bottom|right|end"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/receipt_details_name">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="40"
                    android:gravity="left"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:paddingBottom="@dimen/padding_large"/>
                <TextView
                    android:id="@+id/receipt_details_price"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="60"
                    android:gravity="left"
                    android:padding="@dimen/padding_large"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="40"
                    android:gravity="left"
                    android:layout_gravity="start"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:paddingBottom="@dimen/padding_large"/>
                <TextView
                    android:id="@+id/receipt_details_date"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="08/12/1998"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="60"
                    android:gravity="left"
                    android:layout_gravity="start"
                    android:padding="@dimen/padding_large"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="40"
                    android:gravity="left"
                    android:layout_gravity="start"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:paddingBottom="@dimen/padding_large"/>
                <TextView
                    android:id="@+id/receipt_details_category"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="Others"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="60"
                    android:gravity="left"
                    android:layout_gravity="start"
                    android:padding="@dimen/padding_large"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_by"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="40"
                    android:gravity="left"
                    android:layout_gravity="start"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:paddingBottom="@dimen/padding_large"/>
                <TextView
                    android:id="@+id/receipt_details_payment_method"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="Cash"
                    android:textSize="@dimen/font_title"
                    android:layout_weight="60"
                    android:gravity="left"
                    android:layout_gravity="start"
                    android:padding="@dimen/padding_large"/>
            </LinearLayout>
        </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>